feat: added t2i adapter model

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -205,6 +205,7 @@
         "#@markdown ### Bulk Download ControlNet Model (`fp16`)\n",
         "control_model = False #@param {type: 'boolean'}\n",
         "diff_control_model = False #@param {type: 'boolean'}\n",
+        "t2i_adapter_model = False #@param {type: 'boolean'}\n",
         "\n",
         "installModels = []\n",
         "installVAE = []\n",
@@ -252,6 +253,10 @@
         "                  \"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_scribble_fp16.safetensors\",\n",
         "                  \"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_seg_fp16.safetensors\"]\n",
         "\n",
+        "t2iAdapterUrl = [\"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_keypose_sd14v1.pth\",\n",
+        "                 \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_seg_sd14v1.pth\",\n",
+        "                 \"https://huggingface.co/TencentARC/T2I-Adapter/resolve/main/models/t2iadapter_sketch_sd14v1.pth\"]\n",
+        "\n",
         "for i, model in enumerate(modelList):\n",
         "    if locals()[model]: # if checkbox is checked\n",
         "        installModels.append((model, modelUrl[i]))\n",
@@ -280,6 +285,7 @@
         "downloaded_vae=[]\n",
         "downloaded_control_model=[]\n",
         "downloaded_diff_control_model=[]\n",
+        "downloaded_t2i_adapter_model=[]\n",
         "\n",
         "for model in tqdm(installModels, desc=\"\u001b[1;32mDownloading Models\"):\n",
         "  with capture.capture_output() as cap:\n",
@@ -308,6 +314,15 @@
         "      install(basename, control, is_vae=False, is_control=True)\n",
         "      downloaded_diff_control_model.append(basename)\n",
         "      del cap\n",
+        "\n",
+        "if t2i_adapter_model:\n",
+        "  for adapter in tqdm(t2iAdapterUrl, desc=\"\u001b[1;32mDownloading Text2Image Adapter Model\"):\n",
+        "    basename = os.path.basename(adapter)\n",
+        "    with capture.capture_output() as cap:\n",
+        "      install(basename, adapter, is_vae=False, is_control=True)\n",
+        "      downloaded_t2i_adapter_model.append(basename)\n",
+        "      del cap\n",
+        "\n",
         "download_time = timedelta(seconds=time.time()-downloading)\n",
         "\n",
         "print(\"\\n\u001b[1;32mDownload completed. Took\",\"%02d:%02d:%02d \\n\" % (download_time.seconds / 3600, (download_time.seconds / 60) % 60, download_time.seconds % 60), end='', flush=True)\n",
@@ -326,6 +341,10 @@
         "if diff_control_model:\n",
         "  print(\"\\n\\033[92m\\033[1mDownloaded Difference Control Model:\\033[96m\") \n",
         "  for model in downloaded_diff_control_model:\n",
+        "    print(f\"- {model}\")\n",
+        "if t2i_adapter_model:\n",
+        "  print(\"\\n\\033[92m\\033[1mDownloaded Text2Image Adapter Model:\\033[96m\") \n",
+        "  for model in downloaded_t2i_adapter_model:\n",
         "    print(f\"- {model}\")\n",
         "\n",
         "\n"
