fix: t2i adapter not loaded

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -486,7 +486,7 @@
         "load_in_vram = True #@param {type: 'boolean'}\n",
         "silent_launch = True #@param {type: 'boolean'}\n",
         "auto_vae = True #@param {type: 'boolean'}\n",
-        "auto_model = False #@param {type: 'boolean'}\n",
+        "auto_model = True #@param {type: 'boolean'}\n",
         "fix_black_result = True #@param {type: 'boolean'}\n",
         "additional_args = \"--xformers\" #@param {type: 'string'}\n",
         "\n",
