fix: invalid chillout and sd 1.5 link

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -76,7 +76,7 @@
         "#@markdown ### Repo Config\n",
         "git_pull = False #@param {type:'boolean'}\n",
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
-        "merge_in_vram = True #@param {type:'boolean'}\n",
+        "merge_in_vram = False #@param {type:'boolean'}\n",
         "colab_optimizations = True #@param {type:'boolean'}\n",
         "\n",
         "#@markdown ### Built-In Extensions Config\n",
@@ -223,9 +223,9 @@
         "            \"https://huggingface.co/Linaqruf/hitokomoru-diffusion-v1-5/resolve/main/hitokomoru-v1-5.safetensors\",\n",
         "            \"https://huggingface.co/andite/pastel-mix/resolve/main/pastelmix-fp32.safetensors\", \n",
         "            \"https://huggingface.co/saltacc/wd-1-4-anime/resolve/main/wd-1-4-epoch2-fp16.safetensors\", \n",
-        "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/Stable-diffusion/chillout_mix-pruned.safetensors\", \n",
+        "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/chillout_mix-pruned.safetensors\", \n",
         "            \"https://huggingface.co/IlluminatiAI/Illuminati_Diffusion_v1.0/resolve/main/illuminati_diffusion_v1.0.safetensors\", \n",
-        "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/Stable-diffusion/stable_diffusion_1_5-pruned.safetensors\"]\n",
+        "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/stable_diffusion_1_5-pruned.safetensors\"]\n",
         "\n",
         "vaeList = [\"anime\",\n",
         "           \"waifu_diffusion\",\n",
@@ -486,7 +486,7 @@
         "load_in_vram = True #@param {type: 'boolean'}\n",
         "silent_launch = True #@param {type: 'boolean'}\n",
         "auto_vae = True #@param {type: 'boolean'}\n",
-        "auto_model = True #@param {type: 'boolean'}\n",
+        "auto_model = False #@param {type: 'boolean'}\n",
         "fix_black_result = True #@param {type: 'boolean'}\n",
         "additional_args = \"--xformers\" #@param {type: 'string'}\n",
         "\n",
