fix: invalid model url

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -76,11 +76,11 @@
         "#@markdown ### Repo Config\n",
         "git_pull = False #@param {type:'boolean'}\n",
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
-        "merge_in_vram = False #@param {type:'boolean'}\n",
+        "merge_in_vram = True #@param {type:'boolean'}\n",
         "colab_optimizations = True #@param {type:'boolean'}\n",
         "\n",
         "#@markdown ### Built-In Extensions Config\n",
-        "update_extensions = False #@param {type:'boolean'}\n",
+        "update_extensions = True #@param {type:'boolean'}\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
