fix: update to latest webui

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -70,7 +70,6 @@
         "os.makedirs(deps_dir, exist_ok=True)\n",
         "\n",
         "# url\n",
-        "repo_url = \"https://github.com/AUTOMATIC1111/stable-diffusion-webui\"\n",
         "A100 = \"https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103.ColabProA100-cp38-cp38-linux_x86_64.whl\"\n",
         "\n",
         "#@markdown ### Repo Config\n",
@@ -80,7 +79,7 @@
         "colab_optimizations = True #@param {type:'boolean'}\n",
         "\n",
         "#@markdown ### Built-In Extensions Config\n",
-        "update_extensions = True #@param {type:'boolean'}\n",
+        "update_extensions = False #@param {type:'boolean'}\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
@@ -169,7 +168,7 @@
         "    print(f\"\\n\u001b[1;32m{ext} updated to new version\")\n",
         "  \n",
         "  update_time = timedelta(seconds=time.time()-update)\n",
-        "  print(\"\u001b[1;32mAll extensions are up to date. Took\",\"%02d:%02d:%02d \\n\" % (update_time.seconds / 3600, (update_time.seconds / 60) % 60, update_time.seconds % 60), end='', flush=True)\n",
+        "  print(\"\\n\u001b[1;32mAll extensions are up to date. Took\",\"%02d:%02d:%02d \\n\" % (update_time.seconds / 3600, (update_time.seconds / 60) % 60, update_time.seconds % 60), end='', flush=True)\n",
         "\n",
         "print('\\n\u001b[1;32mAll is done! Go to the next step.')\n",
         "\n"
@@ -377,7 +376,7 @@
         "custom_control_url = \"\" #@param {'type': 'string'}\n",
         "custom_extensions_url = \"\" #@param {'type': 'string'}\n",
         "custom_components_url = \"\" #@param {'type': 'string'}\n",
-        "custom_upscaler_url = \"https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x-AnimeSharp.pth,  https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/4x-UltraSharp.pth, https://huggingface.co/Linaqruf/stolen/blob/main/upscaler/4x_foolhardy_Remacri.pth, https://huggingface.co/Linaqruf/stolen/resolve/main/upscaler/lollypop.pth\" #@param {'type': 'string'}\n",
+        "custom_upscaler_url = \"\" #@param {'type': 'string'}\n",
         "\n",
         "def download(url_list, dst_dir, download_list, is_extensions):\n",
         "  downloaded=[]\n",
@@ -486,7 +485,7 @@
         "load_in_vram = True #@param {type: 'boolean'}\n",
         "silent_launch = True #@param {type: 'boolean'}\n",
         "auto_vae = True #@param {type: 'boolean'}\n",
-        "auto_model = False #@param {type: 'boolean'}\n",
+        "auto_model = True #@param {type: 'boolean'}\n",
         "fix_black_result = True #@param {type: 'boolean'}\n",
         "additional_args = \"--xformers\" #@param {type: 'string'}\n",
         "\n",
