--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -18,7 +18,23 @@
         "All-in-One, Customizable and Flexible Stable Diffusion Web UI for Google Colab\n",
         "\n",
         "<small><font color=gray> You can find latest notebook update [here](https://colab.research.google.com/github/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb)</small></font>\n",
-        "\n"
+        "\n",
+        "<details>\n",
+        "  <summary><big>What's new <small><font color=gray>v.1.2.1 (21/02/23)<small></big></summary>\n",
+        "  \n",
+        "- Added `tqdm` to track your installation, unpacking, and download progress because original logs are disabled.\n",
+        "- Pulled latest version of repo and built-in extension\n",
+        "- ControlNet annotator/preprocessor are now pre-downloaded.\n",
+        "- Added T2I Adapter model from TencentArc.\n",
+        "- Good custom upscalers such as `4x-Animesharp, 4x-UltraSharp, Lollypop, etc`. are now built-in.\n",
+        "- Added Video Loopback extension for making videos in Img2img because they now support ControlNet.\n",
+        "- Deleted CivitAI browser extension because there is another extension that does the same thing, sd-filer. You can download models, lora, and embeddings from the webui.\n",
+        "- Added Katanuki extension to convert your result to a transparent image.\n",
+        "- Deleted Haku Img Extensions because Idk, barely used it\n",
+        "- Added 'use old karras scheduler' to quick settings (header)\n",
+        "- Fixed invalid URL for chillout mix pruned and sd 1.5 pruned.\n",
+        "- Fixed 'download generated images' cell when creating a duplicate zip from 'output.zip(1)' to 'output(n+1).zip'.\n",
+        "- Added checkboxes for randomly selecting VAE and Model.\n"
       ],
       "metadata": {
         "id": "WgQr3s96015a"
@@ -48,6 +64,7 @@
         "# directory\n",
         "root_dir = \"/content\"\n",
         "repo_dir = \"/content/stable-diffusion-webui\"\n",
+        "tmp_dir = f\"{root_dir}/tmp\"\n",
         "patches_dir = f\"{root_dir}/patches\"\n",
         "deps_dir = f\"{root_dir}/deps/\"\n",
         "outputs_dir = f\"{repo_dir}/outputs\"\n",
@@ -60,9 +77,9 @@
         "extensions_dir = f\"{repo_dir}/extensions/\"\n",
         "lora_dir = f\"{repo_dir}/extensions/sd-webui-additional-networks/models/lora\"\n",
         "control_dir = f\"{repo_dir}/extensions/sd-webui-controlnet/models\"\n",
-        "\n",
+        "annotator_dir = f\"{extensions_dir}/sd-webui-controlnet/annotator/\"\n",
         "with capture.capture_output() as cap:\n",
-        "  for dir in [\"root_dir\", \"repo_dir\", \"outputs_dir\", \"components_dir\", \"models_dir\", \"vaes_dir\", \"esrgan_dir\", \"hypernetworks_dir\", \"embeddings_dir\", \"extensions_dir\", \"lora_dir\", \"control_dir\"]:\n",
+        "  for dir in [\"root_dir\", \"repo_dir\", \"tmp_dir\", \"outputs_dir\", \"components_dir\", \"models_dir\", \"vaes_dir\", \"esrgan_dir\", \"hypernetworks_dir\", \"embeddings_dir\", \"extensions_dir\", \"lora_dir\", \"control_dir\", \"annotator_dir\"]:\n",
         "    %store {dir}\n",
         "  del cap\n",
         "\n",
@@ -77,9 +94,10 @@
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
         "merge_in_vram = True #@param {type:'boolean'}\n",
         "colab_optimizations = True #@param {type:'boolean'}\n",
+        "pre_download_annotator = True #@param {type:'boolean'}\n",
         "\n",
         "#@markdown ### Built-In Extensions Config\n",
-        "update_extensions = False #@param {type:'boolean'}\n",
+        "update_extensions = True #@param {type:'boolean'}\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
@@ -91,6 +109,15 @@
         "package_url = [\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui.tar.lz4\",\n",
         "               \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-deps.tar.lz4\",\n",
         "               \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-cache.tar.lz4\"]\n",
+        "\n",
+        "annotator_url = [\"https://github.com/TencentARC/T2I-Adapter/raw/main/models/table5_pidinet.pth\",\n",
+        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/upernet_global_small.pth\",\n",
+        "                  \"https://cloudstor.aarnet.edu.au/plus/s/lTIJF4vrvHCAI31/download\",\n",
+        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/dpt_hybrid-midas-501f0c75.pt\",\n",
+        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/mlsd_large_512_fp32.pth\",\n",
+        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/network-bsds500.pth\",\n",
+        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/hand_pose_model.pth\",\n",
+        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/body_pose_model.pth\"]\n",
         "\n",
         "def ubuntu_deps(url, name, dst):\n",
         "  with capture.capture_output() as cap:\n",
@@ -117,6 +144,9 @@
         "        !tar -xI lz4 -f {package_name} --directory=/\n",
         "      os.remove(os.path.basename(package_name))\n",
         "      del cap\n",
+        "      \n",
+        "  if os.path.exists(\"/usr/local/lib/python3.8/dist-packages/ffmpy-0.3.0.dist-info\"):\n",
+        "    shutil.rmtree(\"/usr/local/lib/python3.8/dist-packages/ffmpy-0.3.0.dist-info\")\n",
         "\n",
         "  s = getoutput('nvidia-smi')\n",
         "  if not 'T4' in s:\n",
@@ -147,6 +177,43 @@
         "    !sed -i \"s@'cpu'@'cuda'@\" /content/stable-diffusion-webui/modules/extras.py\n",
         "\n",
         "  del cap\n",
+        "\n",
+        "if pre_download_annotator:\n",
+        "  for download in tqdm(annotator_url, desc='\u001b[1;32mPreparing ControlNet Annotator'):\n",
+        "    basename = os.path.basename(download)\n",
+        "    with capture.capture_output() as cap:\n",
+        "      if download.startswith(\"https://huggingface.co/\"):\n",
+        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {tmp_dir} -o {basename} {download}\n",
+        "      else:\n",
+        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {tmp_dir} {download}\n",
+        "      del cap\n",
+        "      \n",
+        "  for path in [\"pidinet/table5_pidinet.pth\", \n",
+        "                  \"uniformer/upernet_global_small.pth\", \n",
+        "                  \"leres/res101.pth\", \n",
+        "                  \"midas/dpt_hybrid-midas-501f0c75.pt\", \n",
+        "                  \"mlsd/mlsd_large_512_fp32.pth\", \n",
+        "                  \"hed/network-bsds500.pth\",  \n",
+        "                  \"openpose/hand_pose_model.pth\",  \n",
+        "                  \"openpose/body_pose_model.pth\"]:\n",
+        "\n",
+        "    annotator_name = os.path.basename(path)\n",
+        "    annotator_path = os.path.join(annotator_dir, path)\n",
+        "    annotator_src = os.path.join(tmp_dir, annotator_name)\n",
+        "    annotator_dst = os.path.dirname(annotator_path)\n",
+        "\n",
+        "    if os.path.exists(annotator_path):\n",
+        "      os.remove(annotator_path)\n",
+        "    if not path.endswith(\"upernet_global_small.pth\"):\n",
+        "      shutil.move(annotator_src, annotator_dst)\n",
+        "    else:\n",
+        "      segmentation_path = \"/root/.cache/torch/hub/checkpoints\"\n",
+        "      os.makedirs(segmentation_path, exist_ok=True)\n",
+        "      if os.path.exists(os.path.join(segmentation_path, annotator_name)):\n",
+        "        os.remove(os.path.join(segmentation_path, annotator_name))\n",
+        "      shutil.copy(annotator_src, os.path.join(segmentation_path, annotator_name))\n",
+        "      shutil.move(annotator_src, annotator_dst)\n",
+        "\n",
         "install_time = timedelta(seconds=time.time()-start_install)\n",
         "print(\"\u001b[1;32mFinished unpacking. Took\",\"%02d:%02d:%02d \\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
         "\n",
@@ -166,7 +233,7 @@
         "        pbar.update(1)\n",
         "  for ext in extensions_updated:\n",
         "    print(f\"\\n\u001b[1;32m{ext} updated to new version\")\n",
-        "  \n",
+        "\n",
         "  update_time = timedelta(seconds=time.time()-update)\n",
         "  print(\"\\n\u001b[1;32mAll extensions are up to date. Took\",\"%02d:%02d:%02d \\n\" % (update_time.seconds / 3600, (update_time.seconds / 60) % 60, update_time.seconds % 60), end='', flush=True)\n",
         "\n",
@@ -506,6 +573,9 @@
         "  vae_path = os.path.join(vaes_dir, \"anime.vae.pt\")\n",
         "        \n",
         "os.chdir(repo_dir)\n",
+        "\n",
+        "print(\"\u001b[1;32m\")\n",
+        "\n",
         "!python launch.py \\\n",
         "  --enable-insecure-extension-access \\\n",
         "  --disable-safe-unpickle \\\n",
