fix: some module aren't imported in another cells

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -252,6 +252,10 @@
       "source": [
         "#@title ## **Download Model and VAE**\n",
         "import os\n",
+        "import time\n",
+        "from datetime import timedelta\n",
+        "from IPython.utils import capture\n",
+        "from tqdm import tqdm\n",
         "%store -r\n",
         "\n",
         "os.chdir(root_dir)\n",
@@ -533,7 +537,6 @@
       "outputs": [],
       "source": [
         "#@title ## **Start Stable Diffusion Web UI**\n",
-        "import re\n",
         "import os\n",
         "import random\n",
         "%store -r \n",
@@ -603,6 +606,11 @@
         "#@title ## **Download Generated Images**\n",
         "#@markdown Download file manually from files tab or save to Google Drive\n",
         "import os\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from google.colab import drive\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
         "%store -r \n",
         "\n",
         "os.chdir(outputs_dir)\n",
@@ -620,13 +628,7 @@
         "\n",
         "!zip -r /content/outputs.zip .\n",
         "\n",
-        "if use_drive:\n",
-        "    from pydrive.auth import GoogleAuth\n",
-        "    from google.colab import drive\n",
-        "    from pydrive.drive import GoogleDrive\n",
-        "    from google.colab import auth\n",
-        "    from oauth2client.client import GoogleCredentials\n",
-        "    \n",
+        "if use_drive:   \n",
         "    auth.authenticate_user()\n",
         "    gauth = GoogleAuth()\n",
         "    gauth.credentials = GoogleCredentials.get_application_default()\n",
