feat: support `multi_control_net`

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -13,11 +13,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
         "![](https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui) [![](https://dcbadge.vercel.app/api/shield/931591564424253512?style=flat)](https://lookup.guru/931591564424253512) [![ko-fi](https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat)](https://ko-fi.com/linaqruf) <a href=\"https://saweria.co/linaqruf\"><img alt=\"Saweria\" src=\"https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\"/></a>\n",
         "# **Cagliostro Colab UI**\n",
         "All-in-One, Customizable and Flexible Stable Diffusion Web UI for Google Colab\n",
         "\n",
         "<small><font color=gray> You can find latest notebook update [here](https://colab.research.google.com/github/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb)</small></font>\n",
+        "\n",
+        "<details>\n",
+        "  <summary><big>Credits</big></summary>\n",
+        "\tThis colab notebook was heavily inspired by:\n",
+        "\n",
+        "- <small>[Nocrypt's Colab Remastered](https://colab.research.google.com/drive/1wEa-tS10h4LlDykd87TF5zzpXIIQoCmq)</small>\n",
+        "- <small>[Acheong's Diffusion Web UI](https://colab.research.google.com/github/acheong08/Diffusion-ColabUI/blob/main/Diffusion_WebUI.ipynb)</small>\n",
+        "- <small>[TheLastBen's Fast Stable Diffusion](https://colab.research.google.com/github/TheLastBen/fast-stable-diffusion/blob/main/fast_stable_diffusion_AUTOMATIC1111.ipynb)</small>\n",
+        "\n",
+        "</details>\n",
         "\n",
         "<details>\n",
         "  <summary><big>What's new <small><font color=gray>v.1.2.1 (21/02/23)<small></big></summary>\n",
@@ -55,12 +66,6 @@
         "from tqdm import tqdm\n",
         "%store -r \n",
         "\n",
-        "try:\n",
-        "  start_colab\n",
-        "except:\n",
-        "  start_colab = int(time.time())-5\n",
-        "clear_output()\n",
-        "\n",
         "# directory\n",
         "root_dir = \"/content\"\n",
         "repo_dir = \"/content/stable-diffusion-webui\"\n",
@@ -86,7 +91,7 @@
         "os.makedirs(patches_dir, exist_ok=True)\n",
         "os.makedirs(deps_dir, exist_ok=True)\n",
         "\n",
-        "# url\n",
+        "# url or path\n",
         "A100 = \"https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103.ColabProA100-cp38-cp38-linux_x86_64.whl\"\n",
         "\n",
         "#@markdown ### Repo Config\n",
@@ -110,14 +115,14 @@
         "               \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-deps.tar.lz4\",\n",
         "               \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-cache.tar.lz4\"]\n",
         "\n",
-        "annotator_url = [\"https://github.com/TencentARC/T2I-Adapter/raw/main/models/table5_pidinet.pth\",\n",
-        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/upernet_global_small.pth\",\n",
-        "                  \"https://cloudstor.aarnet.edu.au/plus/s/lTIJF4vrvHCAI31/download\",\n",
-        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/dpt_hybrid-midas-501f0c75.pt\",\n",
-        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/mlsd_large_512_fp32.pth\",\n",
-        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/network-bsds500.pth\",\n",
-        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/hand_pose_model.pth\",\n",
-        "                  \"https://huggingface.co/lllyasviel/ControlNet/resolve/main/annotator/ckpts/body_pose_model.pth\"]\n",
+        "annotator_url= [\"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/table5_pidinet.pth\",\n",
+        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/upernet_global_small.pth\",\n",
+        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/res101.pth\",\n",
+        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/dpt_hybrid-midas-501f0c75.pt\",\n",
+        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/mlsd_large_512_fp32.pth\",\n",
+        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/network-bsds500.pth\",\n",
+        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/hand_pose_model.pth\",\n",
+        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/body_pose_model.pth\"]\n",
         "\n",
         "def ubuntu_deps(url, name, dst):\n",
         "  with capture.capture_output() as cap:\n",
@@ -182,20 +187,17 @@
         "  for download in tqdm(annotator_url, desc='\u001b[1;32mPreparing ControlNet Annotator'):\n",
         "    basename = os.path.basename(download)\n",
         "    with capture.capture_output() as cap:\n",
-        "      if download.startswith(\"https://huggingface.co/\"):\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {tmp_dir} -o {basename} {download}\n",
-        "      else:\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {tmp_dir} {download}\n",
+        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {tmp_dir} -o {basename} {download}\n",
         "      del cap\n",
         "      \n",
         "  for path in [\"pidinet/table5_pidinet.pth\", \n",
-        "                  \"uniformer/upernet_global_small.pth\", \n",
-        "                  \"leres/res101.pth\", \n",
-        "                  \"midas/dpt_hybrid-midas-501f0c75.pt\", \n",
-        "                  \"mlsd/mlsd_large_512_fp32.pth\", \n",
-        "                  \"hed/network-bsds500.pth\",  \n",
-        "                  \"openpose/hand_pose_model.pth\",  \n",
-        "                  \"openpose/body_pose_model.pth\"]:\n",
+        "              \"uniformer/upernet_global_small.pth\", \n",
+        "              \"leres/res101.pth\", \n",
+        "              \"midas/dpt_hybrid-midas-501f0c75.pt\", \n",
+        "              \"mlsd/mlsd_large_512_fp32.pth\", \n",
+        "              \"hed/network-bsds500.pth\",  \n",
+        "              \"openpose/hand_pose_model.pth\",  \n",
+        "              \"openpose/body_pose_model.pth\"]:\n",
         "\n",
         "    annotator_name = os.path.basename(path)\n",
         "    annotator_path = os.path.join(annotator_dir, path)\n",
@@ -273,9 +275,9 @@
         "waifu_diffusion = False #@param {type: 'boolean'}\n",
         "stable_diffusion = False #@param {type: 'boolean'}\n",
         "#@markdown ### Bulk Download ControlNet Model (`fp16`)\n",
-        "control_model = False #@param {type: 'boolean'}\n",
-        "diff_control_model = False #@param {type: 'boolean'}\n",
-        "t2i_adapter_model = False #@param {type: 'boolean'}\n",
+        "control_model = True #@param {type: 'boolean'}\n",
+        "diff_control_model = True #@param {type: 'boolean'}\n",
+        "t2i_adapter_model = True #@param {type: 'boolean'}\n",
         "\n",
         "installModels = []\n",
         "installVAE = []\n",
@@ -305,27 +307,27 @@
         "          \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\",\n",
         "          \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.ckpt\"]\n",
         "  \n",
-        "controlUrl = [\"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_canny-fp16.safetensors\",           \n",
-        "              \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_depth-fp16.safetensors\",\n",
-        "              \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_hed-fp16.safetensors\",\n",
-        "              \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_mlsd-fp16.safetensors\",\n",
-        "              \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_normal-fp16.safetensors\",\n",
-        "              \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_openpose-fp16.safetensors\",\n",
-        "              \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_scribble-fp16.safetensors\",\n",
-        "              \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_seg-fp16.safetensors\"]\n",
+        "controlUrl = [\"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/control_canny-fp16.safetensors\",           \n",
+        "              \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/control_depth-fp16.safetensors\",\n",
+        "              \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/control_hed-fp16.safetensors\",\n",
+        "              \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/control_mlsd-fp16.safetensors\",\n",
+        "              \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/control_normal-fp16.safetensors\",\n",
+        "              \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/control_openpose-fp16.safetensors\",\n",
+        "              \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/control_scribble-fp16.safetensors\",\n",
+        "              \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/control_seg-fp16.safetensors\"]\n",
         "\n",
-        "diffControlUrl = [\"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_canny_fp16.safetensors\",           \n",
-        "                  \"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_depth_fp16.safetensors\",\n",
-        "                  \"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_hed_fp16.safetensors\",\n",
-        "                  \"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_mlsd_fp16.safetensors\",\n",
-        "                  \"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_normal_fp16.safetensors\",\n",
-        "                  \"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_openpose_fp16.safetensors\",\n",
-        "                  \"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_scribble_fp16.safetensors\",\n",
-        "                  \"https://huggingface.co/kohya-ss/ControlNet-diff-modules/resolve/main/diff_control_sd15_seg_fp16.safetensors\"]\n",
+        "diffControlUrl = [\"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_canny_fp16.safetensors\",           \n",
+        "                  \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_depth_fp16.safetensors\",\n",
+        "                  \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_hed_fp16.safetensors\",\n",
+        "                  \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_mlsd_fp16.safetensors\",\n",
+        "                  \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_normal_fp16.safetensors\",\n",
+        "                  \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_openpose_fp16.safetensors\",\n",
+        "                  \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_scribble_fp16.safetensors\",\n",
+        "                  \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_seg_fp16.safetensors\"]\n",
         "\n",
-        "t2iAdapterUrl = [\"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_keypose-fp16.safetensors\",\n",
-        "                 \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors\",\n",
-        "                 \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\"]\n",
+        "t2iAdapterUrl = [\"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_keypose-fp16.safetensors\",\n",
+        "                 \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_seg-fp16.safetensors\",\n",
+        "                 \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_sketch-fp16.safetensors\"]\n",
         "\n",
         "for i, model in enumerate(modelList):\n",
         "    if locals()[model]: # if checkbox is checked\n",
@@ -549,6 +551,12 @@
         "#@markdown > Get <b>your</b> token for ngrok [here](https://dashboard.ngrok.com/get-started/your-authtoken) \n",
         "ngrok_token = \"\" #@param {type: 'string'}\n",
         "ngrok_region = \"ap\" #@param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
+        "\n",
+        "#@markdown ### ControlNet Config:\n",
+        "multi_control_net = 2 #@param {type:\"slider\", min:1, max:10, step:1}\n",
+        "controlnet_py = \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py\"\n",
+        "!sed -i 's/\\(shared\\.opts\\.data\\.get(\"control_net_max_models_num\",\\) [0-9]*/\\1 '\"$multi_control_net\"'/' {controlnet_py}\n",
+        "\n",
         "#@markdown ### Arguments\n",
         "\n",
         "medvram = False #@param {type: 'boolean'}\n",
