feat: added support for multi_controlnet

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -31,8 +31,10 @@
         "</details>\n",
         "\n",
         "<details>\n",
-        "  <summary><big>What's new <small><font color=gray>v.1.2.1 (21/02/23)<small></big></summary>\n",
-        "  \n",
+        "  <summary><big>What's new <small><font color=gray>v.1.2.2 (23/02/23)<small></big></summary>\n",
+        "\n",
+        "- Added support for `multi-controlnet` by adding slider in certain cell (default: `2`).\n",
+        "- Backup all ControlNet annotator and model to personal repo.\n",
         "- Added `tqdm` to track your installation, unpacking, and download progress because original logs are disabled.\n",
         "- Pulled latest version of repo and built-in extension\n",
         "- ControlNet annotator/preprocessor are now pre-downloaded.\n",
@@ -45,7 +47,7 @@
         "- Added 'use old karras scheduler' to quick settings (header)\n",
         "- Fixed invalid URL for chillout mix pruned and sd 1.5 pruned.\n",
         "- Fixed 'download generated images' cell when creating a duplicate zip from 'output.zip(1)' to 'output(n+1).zip'.\n",
-        "- Added checkboxes for randomly selecting VAE and Model.\n"
+        "- Added checkboxes for randomly selecting VAE and Model.</small>\n"
       ],
       "metadata": {
         "id": "WgQr3s96015a"
@@ -275,9 +277,9 @@
         "waifu_diffusion = False #@param {type: 'boolean'}\n",
         "stable_diffusion = False #@param {type: 'boolean'}\n",
         "#@markdown ### Bulk Download ControlNet Model (`fp16`)\n",
-        "control_model = True #@param {type: 'boolean'}\n",
-        "diff_control_model = True #@param {type: 'boolean'}\n",
-        "t2i_adapter_model = True #@param {type: 'boolean'}\n",
+        "control_model = False #@param {type: 'boolean'}\n",
+        "diff_control_model = False #@param {type: 'boolean'}\n",
+        "t2i_adapter_model = False #@param {type: 'boolean'}\n",
         "\n",
         "installModels = []\n",
         "installVAE = []\n",
@@ -553,9 +555,9 @@
         "ngrok_region = \"ap\" #@param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
         "\n",
         "#@markdown ### ControlNet Config:\n",
-        "multi_control_net = 2 #@param {type:\"slider\", min:1, max:10, step:1}\n",
+        "multi_controlnet = 2 #@param {type:\"slider\", min:1, max:10, step:1}\n",
         "controlnet_py = \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py\"\n",
-        "!sed -i 's/\\(shared\\.opts\\.data\\.get(\"control_net_max_models_num\",\\) [0-9]*/\\1 '\"$multi_control_net\"'/' {controlnet_py}\n",
+        "!sed -i 's/\\(shared\\.opts\\.data\\.get(\"control_net_max_models_num\",\\) [0-9]*/\\1 '\"$multi_controlnet\"'/' {controlnet_py}\n",
         "\n",
         "#@markdown ### Arguments\n",
         "\n",
