--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -241,8 +241,7 @@
         "  update_time = timedelta(seconds=time.time()-update)\n",
         "  print(\"\\n\u001b[1;32mAll extensions are up to date. Took\",\"%02d:%02d:%02d \\n\" % (update_time.seconds / 3600, (update_time.seconds / 60) % 60, update_time.seconds % 60), end='', flush=True)\n",
         "\n",
-        "print('\\n\u001b[1;32mAll is done! Go to the next step.')\n",
-        "\n"
+        "print('\\n\u001b[1;32mAll is done! Go to the next step.')"
       ],
       "metadata": {
         "id": "A6c7-qjDdb0X",
@@ -269,6 +268,7 @@
         "hitokomoru_v1_5 = False #@param {type: 'boolean'}\n",
         "pastelmix = False #@param {type: 'boolean'}\n",
         "waifu_diffusion_v1_4_e2 = False #@param {type: 'boolean'}\n",
+        "replicant_v1 = False #@param {type: 'boolean'}\n",
         "chillout_mix = False #@param {type: 'boolean'}\n",
         "illuminati_diffusion = False #@param {type: 'boolean'}\n",
         "stable_diffusion_v1_5 = False #@param {type: 'boolean'}\n",
@@ -289,6 +289,7 @@
         "             \"hitokomoru_v1_5\",\n",
         "             \"pastelmix\",\n",
         "             \"waifu_diffusion_v1_4_e2\",\n",
+        "             \"replicant_v1\",\n",
         "             \"chillout_mix\",\n",
         "             \"illuminati_diffusion\",\n",
         "             \"stable_diffusion_v1_5\"]\n",
@@ -296,7 +297,8 @@
         "            \"https://huggingface.co/cag/anything-v3-3/resolve/main/anything-v3-3.safetensors\",\n",
         "            \"https://huggingface.co/Linaqruf/hitokomoru-diffusion-v1-5/resolve/main/hitokomoru-v1-5.safetensors\",\n",
         "            \"https://huggingface.co/andite/pastel-mix/resolve/main/pastelmix-fp32.safetensors\", \n",
-        "            \"https://huggingface.co/saltacc/wd-1-4-anime/resolve/main/wd-1-4-epoch2-fp16.safetensors\", \n",
+        "            \"https://huggingface.co/saltacc/wd-1-4-anime/resolve/main/wd-1-4-epoch2-fp16.safetensors\",\n",
+        "            \"https://huggingface.co/gsdf/Replicant-V1.0/resolve/main/Replicant-V1.0_fp16.safetensors\",\n",
         "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/chillout_mix-pruned.safetensors\", \n",
         "            \"https://huggingface.co/IlluminatiAI/Illuminati_Diffusion_v1.0/resolve/main/illuminati_diffusion_v1.0.safetensors\", \n",
         "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/stable_diffusion_1_5-pruned.safetensors\"]\n",
@@ -419,9 +421,7 @@
         "if t2i_adapter_model:\n",
         "  print(\"\\n\\033[92m\\033[1mDownloaded Text2Image Adapter Model:\\033[96m\") \n",
         "  for model in downloaded_t2i_adapter_model:\n",
-        "    print(f\"- {model}\")\n",
-        "\n",
-        "\n"
+        "    print(f\"- {model}\")"
       ],
       "metadata": {
         "id": "qgvihy5BQ3II",
@@ -519,10 +519,7 @@
         "download_time = timedelta(seconds=time.time()-downloading)\n",
         "\n",
         "print(\"\\n\u001b[1;32mDownload completed. Took\",\"%02d:%02d:%02d\" % (download_time.seconds / 3600, (download_time.seconds / 60) % 60, download_time.seconds % 60), end='', flush=True)\n",
-        "print('\\n\u001b[1;32mAll is done! Go to the next step.', end=\"\")\n",
-        "\n",
-        "\n",
-        "  "
+        "print('\\n\u001b[1;32mAll is done! Go to the next step.', end=\"\")"
       ],
       "metadata": {
         "id": "euzt0QG35aEO",
@@ -607,7 +604,7 @@
         "  --opt-sub-quad-attention \\\n",
         "  --opt-channelslast \\\n",
         "  --theme dark \\\n",
-        "  {additional_args}\n"
+        "  {additional_args}"
       ]
     },
     {
